basic HTML structure and CSS styling

--- a/app/index.html
+++ b/app/index.html
@@ -1,54 +1,76 @@
 <!doctype html>
 <html class="no-js">
-    <head>
-        <meta charset="utf-8">
-        <title>features emr</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+	<head>
+		<meta charset="utf-8">
+		<title>features emr</title>
+		<meta name="description" content="">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link href='http://fonts.googleapis.com/css?family=Roboto:300,100' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="styles/main.css">
+	</head>
 
-        <!-- build:css styles/vendor.css -->
-        <!-- bower:css -->
-        <!-- endbower -->
-        <!-- endbuild -->
+	<body>
+		<div class="nav-bar">
+			<div class="nav-bar-container">
+				<a href="##"> <img class="emr-logo" src="images/emr-logo.svg"> </a>
+				<a class="features nav" href="##">Features</a>
+				<a class="pricing nav" href="##">Pricing</a>
+				<a class="tour nav" href="##">Tour</a>
+				<a class="login nav" href="##">Log In</a>
+			</div>
+		</div>
 
-        <!-- build:css styles/main.css -->
-        <link rel="stylesheet" href="styles/main.css">
-        <!-- endbuild -->
+		<div class="hero-text">
+			<p>You focus on patient care.<br>
+				We make it easier.</p>
+		</div>
+		<div class="hero-image"></div>
+		<hr class="hero-hr">
 
-    </head>
-    <body>
-        <!--[if lt IE 10]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+		<div class="wrapper">
+			<div class="tile-container">
+				<div class="tile">
+					<h2>Patient Chart</h2><hr>
+	<!-- 				<h4>Clinical Profile</h4>
+					<h4>Chronological Record</h4>
+					<h4>Visit Note</h4>
+					<h4>Ordering Tests & Prescribing</h4>
+					<h4>Messages to Staff</h4>
+					<h4>Letters</h4>
+					<h4>Elation Provider Network & Provider Passport</h4> -->
+				</div>
 
-        <div class="hero-unit">
-            <h1>'Allo, 'Allo!</h1>
-            <p>You now have</p>
-            <ul>
-                <li>HTML5 Boilerplate</li>
-                <li>Sass</li>
-            </ul>
-        </div>
+				<div class="tile">
+					<h2>Practice Homepage</h2><hr>
+				</div>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
-            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-            e.src='//www.google-analytics.com/analytics.js';
-            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X');ga('send','pageview');
-        </script>
+				<div class="tile">
+					<h2>Patient Portal</h2><hr>
+				</div>
 
-        <!-- build:js scripts/vendor.js -->
-        <!-- bower:js -->
-        <script src="bower_components/jquery/dist/jquery.js"></script>
-        <!-- endbower -->
-        <!-- endbuild -->
+				<div class="tile">
+					<h2>Support</h2><hr>
+				</div>
 
-        <!-- build:js scripts/main.js -->
-        <script src="scripts/main.js"></script>
-        <!-- endbuild -->
-</body>
+				<div class="tile">
+					<h2>Getting Started</h2><hr>
+				</div>
+
+				<div class="tile">
+					<h2>Platform and Security</h2><hr>
+					<p>Automatically encrypted backups; full HIPAA compliance</p>
+				</div>
+
+				<div class="tile">
+					<h2>Product Updates</h2><hr>
+					<p>Consistent, scheduled updates influenced by physicians like you</p>
+				</div>
+			</div> <!-- closes til-container div -->
+		</div> <!-- closes wrapper div -->
+
+		
+		<!-- scripts -->
+			<script src="bower_components/jquery/dist/jquery.js"></script>
+			<script src="scripts/main.js"></script>
+	</body>
 </html>
