--- a/app/index.html
+++ b/app/index.html
@@ -29,36 +29,35 @@
 
 		<div class="wrapper">
 			<div class="tile-container">
-				<div class="tile">
+				<div class="tile-double">
 					<h2>Patient Chart</h2><hr>
-	<!-- 				<h4>Clinical Profile</h4>
-					<h4>Chronological Record</h4>
-					<h4>Visit Note</h4>
-					<h4>Ordering Tests & Prescribing</h4>
-					<h4>Messages to Staff</h4>
-					<h4>Letters</h4>
-					<h4>Elation Provider Network & Provider Passport</h4> -->
+					<p>Everything in one place: view a patient's clinical profile, chronological record and visit notes; order tests; prescribe medications; send letters and files to patients and other providers or to your practice staff; access the Elation Provider Network & Provider Passport</p>
+				</div></p>
+					
+
+				<div class="tile rightest">
+					<h2>Patient Portal</h2><hr>
+					<p>One click to set up patient accounts — and you control what the patient sees or doesn't see; accessible from any device</p>
 				</div>
 
 				<div class="tile">
 					<h2>Practice Homepage</h2><hr>
-				</div>
-
-				<div class="tile">
-					<h2>Patient Portal</h2><hr>
+					<p>Manage scheduling and communication; view patients’ incoming reports, messages, and refill requests; generate reports of patient lists, practice performance, clinical quality measures and more</p>
 				</div>
 
 				<div class="tile">
 					<h2>Support</h2><hr>
+					<p>Live instant message support during business hours plus 24/7 phone and email support; guaranteed response in 30 minutes or less for urgent issues</p>
 				</div>
 
-				<div class="tile">
+				<div class="tile rightest">
 					<h2>Getting Started</h2><hr>
+					<p>Get up and running within an hour — ElationEMR automatically creates almost all of your patients' charts plus automatic, secure transfer of patients’ medication history, labs, and demographics</p>
 				</div>
 
 				<div class="tile">
 					<h2>Platform and Security</h2><hr>
-					<p>Automatically encrypted backups; full HIPAA compliance</p>
+					<p>Secure access to our cloud-based platform on any Mac or PC with an internet connection — ElationEMR features automatically encrypted backups and is fully HIPAA compliant</p>
 				</div>
 
 				<div class="tile">
@@ -68,6 +67,16 @@
 			</div> <!-- closes til-container div -->
 		</div> <!-- closes wrapper div -->
 
+		<div class="bottom-container">
+			<div class="action-box">
+				<h2>Ready to get started? Take our free intro course. &#10095;&#10095;</h2>
+<!-- 				<img class="sec-img" src="images/hp_passport_panel.png">
+ -->			</div>
+			<div class="footer">
+				<p>Copyright © 2014 ElationEMR. Built in beautiful Spartanburg, SC.
+</p>
+			</div>
+		</div> <!-- closes bottom-container div -->
 		
 		<!-- scripts -->
 			<script src="bower_components/jquery/dist/jquery.js"></script>
